--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
                                     <i class="fas fa-search me-1"></i> ค้นหา
                                 </button>
                             </div>
+                            <div class="col-12 mt-3">
+                                <label class="form-label">
+                                    <i class="fas fa-clock me-1"></i> รูปแบบการแสดงข้อมูล:
+                                </label>
+                                <div class="d-flex gap-4">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="displayMode" id="hourlyMode" value="hourly" checked>
+                                        <label class="form-check-label" for="hourlyMode">
+                                            <i class="fas fa-hourglass-half me-1"></i> แสดงรายชั่วโมง
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="displayMode" id="quarterMode" value="quarter">
+                                        <label class="form-check-label" for="quarterMode">
+                                            <i class="fas fa-stopwatch me-1"></i> แสดงทุก 15 นาที
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
