--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                                     <i class="fas fa-search me-1"></i> ค้นหา
                                 </button>
                             </div>
-                            <div class="col-12 mt-3">
+                            <!-- คอมเม้นฟังก์ชั่นแสดงรายชั่วโมงและทุก 15 นาทีไว้ก่อน ตามที่ลูกค้าต้องการ -->
+                            <!-- <div class="col-12 mt-3">
                                 <label class="form-label">
                                     <i class="fas fa-clock me-1"></i> รูปแบบการแสดงข้อมูล:
                                 </label>
@@ -78,7 +79,7 @@
                                         </label>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
